--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,9 @@
-name: .NET
+name: Builds and push nugets
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_call:
 
 jobs:
   build:
@@ -22,4 +21,5 @@ jobs:
     - name: Build
       run: dotnet build "./src/Neuroglia Framework.sln" --configuration Release --no-restore 
     - name: Push
+      if: github.event_name != 'pull_request' && github.repository == 'neuroglia-io/framework' && github.ref_name == 'main'
       run: dotnet nuget push "./src/*/*/bin/Release/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
